# claude-autonomous-dev-v2

./: .gitignore  CLAUDE.md  project.config.json  pyproject.toml
.claude/: settings.json
.claude/checkpoints/: checkpoint-test-session-1767988913.json  checkpoint-test-session-1767988949.json  checkpoint-test-session-1767989197.json  checkpoint-test-session-1767989380.json  checkpoint-test-session-1767989658.json  checkpoint-test-session-1767989723.json  checkpoint-test-session-1767989858.json  checkpoint-test-session-1767990018.json  checkpoint-test-session-1767990193.json  checkpoint-test-session-1767990363.json  checkpoint-test-session-1767990524.json  checkpoint-test-session-1767990686.json  (+18 more)
.claude/commands/: fix.md  (+8 more)
.mcp/: README.md  puppeteer.json
ai-docs/: research-analysis.md
logs/: .gitignore
scripts/: find-session-logs.sh
specs/: features.json  progress.md  roadmap.md  tasks.json  v2-specification.md
src/: __init__.py  agent_protocol.py  circuit_breaker.py  context_manager.py  dependency_graph.py  error_classifier.py  flaky_detector.py  loop_control.py  metrics.py  parallel_executor.py  progress_tracker.py  requirements_analyzer.py  root_cause_analyzer.py  self_optimizer.py  test_analyzer.py
tests/: __init__.py  test_agent_protocol.py  test_circuit_breaker.py  test_context_manager.py  test_dependency_graph.py  test_error_classifier.py  test_flaky_detector.py  test_loop_control.py  test_metrics.py  test_parallel_executor.py  test_progress_tracker.py  test_requirements_analyzer.py  test_root_cause.py  test_self_optimizer.py  test_test_analyzer.py
(+24 files in other folders)
